# paperboat

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  README.md  build.rs  codecov.yml  coverage-summary.json  coverage.txt  deny.toml  improve.md  lcov.info  module_alpha.py  paperboat.txt  plan-batch-1.md  plan-batch-2.md  plan-batch-3.md  plan-nested-logging-system.md  plan-villalobos-improvements.md  rustfmt.toml  start-with-planner.md
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml  test-windows.yml
.paperboat/agents/: implementer.toml  orchestrator.toml  planner.toml
.paperboat/docs/: agent-investigation.md  coverage-audit.md  coverage-plan.md
.villalobos/agents/: implementer.toml  orchestrator.toml
docs/: INTENT_BASED_MCP_DESIGN.md  MOCK_DATA_SYSTEM_ARCHITECTURE.md  TESTHARNESS_TOOL_CALL_ANALYSIS.md  TUI_MOUSE_SUPPORT_PLAN.md  cursor-acp.md  cursor-cli-transport-implementation.md  cursor-cli.md  cursor-config.md  plan-backend-abstraction.md  tui-plan.md
logs/: .gitkeep
prompts/: README.md  explorer.txt  implementer.txt  orchestrator.txt  planner.txt  selfimprover.txt  verifier.txt
scripts/: install-hooks.sh  install.ps1  install.sh  pre-commit
src/: acp.rs  app.rs  cli.rs  error.rs  main.rs  metrics.rs  models.rs  types.rs
src/agents/: config.rs  mod.rs  templates.rs
src/app/: agent_handler.rs  agent_session_handler.rs  agent_spawner.rs  concurrent_spawner.rs  context_generator.rs  decompose.rs  mod.rs  orchestrator.rs  orchestrator_acp.rs  orchestrator_handlers.rs  planner.rs  retry.rs  router.rs  run.rs  sequential_impl.rs  session.rs  session_drain.rs  socket.rs  spawn_config.rs  tool_filtering.rs  types.rs
src/backend/: mod.rs  trait.rs  transport.rs
src/backend/auggie/: acp.rs  auth.rs  cache.rs  mod.rs  models.rs
src/backend/cursor/: acp.rs  acp_transport.rs  auth.rs  cache.rs  cli.rs  mcp_config.rs  mod.rs  models.rs  permission.rs
src/config/: loader.rs  mod.rs  resolver.rs  writer.rs
src/error/: acp.rs  config.rs  mcp.rs  mod.rs  orchestrator.rs  task.rs
src/ipc/: address.rs  error.rs  mod.rs  stream.rs  unix.rs  windows.rs
src/logging/: manager.rs  mod.rs  scope.rs  stream.rs  writer.rs
src/mcp_server/: error.rs  handlers.rs  mod.rs  server.rs  socket.rs  types.rs
src/mcp_server/handlers/: mod.rs  response.rs  tool_parsing.rs  tool_schemas.rs
src/self_improve/: config.rs  context_builder.rs  detection.rs  mod.rs  runner.rs
src/tasks/: manager.rs  mod.rs
src/testing/: assertions.rs  builders.rs  e2e_tests.rs  harness.rs  integration_tests.rs  interceptor.rs  mock_acp.rs  mock_backend.rs  mock_transport.rs  mod.rs  scenario.rs  types.rs  unit_tests.rs
src/tui/: agent_node.rs  agent_tree_state.rs  app.rs  events.rs  layout.rs  mod.rs  model_config_update.rs  state.rs  task_list_state.rs
src/tui/events/: keyboard.rs  mod.rs  mouse.rs
src/tui/widgets/: agent_output.rs  agent_tree.rs  app_logs.rs  backend_selection.rs  help.rs  mod.rs  settings.rs  splash.rs  status_bar.rs  task_detail.rs  task_list.rs
tests/fixtures/acp_responses/: session_new_success.toml
tests/fixtures/plans/: .gitkeep
tests/fixtures/tool_responses/: implement_success.toml
tests/integration/: run_all_tests.sh  run_live_test.sh  test_completion_timing.sh  test_process_cleanup.sh  test_prompt.txt  test_self_improvement.sh  test_self_improvement_prompt.txt
tests/scenarios/: README.md  agent_spawn_failure.toml  completion_rejection.toml  concurrent_agents.toml  early_socket_close.toml  error_recovery.toml  multi_implement.toml  nested_decompose.toml  planner_failure.toml  planning_only.toml  session_drain.toml  simple_implement.toml  wait_mode_all_mixed.toml  wait_mode_any.toml
