[package]
name = "villalobos"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = []
# Enable the testing module for integration tests
testing = ["dep:tempfile"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.4"
shellexpand = "3.1.2"
regex = "1.12.3"
chrono = "0.4.44"
toml = "1.0.4"
async-trait = "0.1.89"
tempfile = { version = "3.26.0", optional = true }

[dev-dependencies]
tempfile = "3.26.0"

