[package]
name = "villalobos"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = []
# Enable the testing module for integration tests
testing = ["dep:tempfile"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.4"
shellexpand = "3.1.2"
regex = "1.12.3"
chrono = "0.4.44"
toml = "1.0.4"
async-trait = "0.1.89"
tempfile = { version = "3.26.0", optional = true }

[dev-dependencies]
tempfile = "3.26.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Lint groups with lower priority so individual overrides work
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow specific patterns with justification
module_name_repetitions = "allow"  # Module names naturally repeat in types
must_use_candidate = "allow"       # Too noisy for builder patterns
missing_errors_doc = "allow"       # Will add later but not required for MVP
missing_panics_doc = "allow"       # Will add later but not required for MVP
future_not_send = "allow"          # App is single-threaded, futures don't need Send
significant_drop_tightening = "allow"  # False positives in async code
option_if_let_else = "allow"       # Often less readable than match
return_self_not_must_use = "allow" # Builder patterns don't need #[must_use]
unused_self = "allow"              # Keep for API consistency
too_many_lines = "allow"           # Will refactor later, not critical for MVP
manual_let_else = "allow"          # Style preference, both are readable
needless_pass_by_ref_mut = "allow" # False positives in async trait methods
trivially_copy_pass_by_ref = "allow"  # Consistency over micro-optimization
literal_string_with_formatting_args = "allow"  # Template strings use {task} intentionally
unused_async = "allow"             # Async is needed for trait compatibility
derive_partial_eq_without_eq = "allow"  # Not all types can implement Eq
unnecessary_debug_formatting = "allow"  # Path debug formatting is fine for errors
